--- a/Pages/Account/Cart.razor.css
+++ b/Pages/Account/Cart.razor.css
@@ -1,42 +1,50 @@
 ﻿.cart {
-  width: 100%; }
-  .cart__container {
-    max-width: 85em;
-    margin: 0 auto;
-    padding: 3em 1em; }
-  .cart__title {
-    margin-left: 1.7em;
-    margin-bottom: 1.2em;
-    font-size: 24px;
-    line-height: 1.5em;
-    text-align: start; }
-  .cart__main-block {
-    display: flex;
-    justify-content: flex-start;
-    gap: 2em; }
-  .cart__empty-image {
-    margin-top: 40px;
-    margin: 100px auto 0px;
-    align-self: center;
-    justify-self: center;
-    height: 150px;
-    width: 150px; }
-    .cart__empty-image img {
-      height: 100%;
-      width: 100%; }
-  .cart__empty-title {
-    margin: 20px 7px 7px;
-    text-align: center;
-    align-self: center;
-    justify-self: center;
-    font-size: 20px;
-    font-weight: 600; }
-  .cart__empty-message {
-    margin: 0px 7px;
-    font-size: 15px;
-    align-self: center;
-    justify-self: center;
-    text-align: center; }
+  width: 100%;
+}
+.cart__container {
+  max-width: 85em;
+  margin: 0 auto;
+  padding: 3em 1em;
+}
+.cart__title {
+  margin-left: 1.7em;
+  margin-bottom: 1.2em;
+  font-size: 24px;
+  line-height: 1.5em;
+  text-align: start;
+}
+.cart__main-block {
+  display: flex;
+  justify-content: flex-start;
+  gap: 2em;
+}
+.cart__empty-image {
+  margin-top: 40px;
+  margin: 100px auto 0px;
+  align-self: center;
+  justify-self: center;
+  height: 150px;
+  width: 150px;
+}
+.cart__empty-image img {
+  height: 100%;
+  width: 100%;
+}
+.cart__empty-title {
+  margin: 20px 7px 7px;
+  text-align: center;
+  align-self: center;
+  justify-self: center;
+  font-size: 20px;
+  font-weight: 600;
+}
+.cart__empty-message {
+  margin: 0px 7px;
+  font-size: 15px;
+  align-self: center;
+  justify-self: center;
+  text-align: center;
+}
 
 .main-block__products-cards {
   justify-content: center;
@@ -46,10 +54,11 @@
   gap: 0.5em;
   padding: 1em 2em;
   border-radius: 5px;
-  border: 1px solid #b3b3b3; }
-  .main-block__products-cards div:first-child {
-    border-top: 0; }
-
+  border: 1px solid #b3b3b3;
+}
+.main-block__products-cards div:first-child {
+  border-top: 0;
+}
 .main-block__information-block {
   width: 20em;
   height: min-content;
@@ -60,7 +69,8 @@
   flex-direction: column;
   padding: 2em;
   border-radius: 5px;
-  border: 1px solid #b3b3b3; }
+  border: 1px solid #b3b3b3;
+}
 
 .products-cards__product-card {
   width: 100%;
@@ -73,8 +83,8 @@
   justify-content: center;
   align-items: center;
   justify-items: center;
-  align-content: center; }
-
+  align-content: center;
+}
 .products-cards__select-all-checkbox {
   display: flex;
   cursor: pointer;
@@ -84,11 +94,12 @@
   margin-bottom: 0;
   font-size: 15px;
   margin: 20px 30px;
-  align-self: flex-start; }
+  align-self: flex-start;
+}
 
 .select-checkbox input {
-  display: none; }
-
+  display: none;
+}
 .select-checkbox span {
   position: relative;
   display: inline-block;
@@ -96,75 +107,84 @@
   cursor: pointer;
   height: 20px;
   box-shadow: 0px 0px 1px black;
-  border-radius: 1px; }
-  .select-checkbox span::before {
-    content: '';
-    position: absolute;
-    top: 25%;
-    left: 24%;
-    transform: translate(-50%, -50%);
-    width: 11px;
-    height: 7px;
-    border-right: 3px solid black;
-    border-top: 3px solid black;
-    transform: rotate(135deg);
-    transition: 0.15s all ease;
-    opacity: 0; }
-
+  border-radius: 1px;
+}
+.select-checkbox span::before {
+  content: "";
+  position: absolute;
+  top: 25%;
+  left: 24%;
+  transform: translate(-50%, -50%);
+  width: 11px;
+  height: 7px;
+  border-right: 3px solid black;
+  border-top: 3px solid black;
+  transform: rotate(135deg);
+  transition: 0.15s all ease;
+  opacity: 0;
+}
 .select-checkbox input:checked + span::before {
-  opacity: 1; }
+  opacity: 1;
+}
 
 .product-card__image {
   cursor: pointer;
   padding: 0.4em;
-  background-color: #f6f6f6; }
-  .product-card__image img {
-    object-fit: contain;
-    height: 10em;
-    width: 10em;
-    background-color: #f6f6f6; }
-
+  background-color: #f6f6f6;
+}
+.product-card__image img {
+  object-fit: contain;
+  height: 10em;
+  width: 10em;
+  background-color: #f6f6f6;
+}
 .product-card__product-info {
   display: flex;
   justify-self: flex-start;
-  flex-direction: column; }
-
+  flex-direction: column;
+}
 .product-card__counter-block {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center; }
-  .product-card__counter-block span {
-    display: block;
-    font-size: 15px;
-    transform: translateY(-7px); }
-
+  align-items: center;
+}
+.product-card__counter-block span {
+  display: block;
+  font-size: 15px;
+  transform: translateY(-7px);
+}
 .product-card__block-price {
-  font-size: 16px; }
-  .product-card__block-price.hasDiscount .block-price__price {
-    text-decoration: line-through;
-    text-align: center; }
-  .product-card__block-price.hasDiscount .block-price__discount-price {
-    display: block;
-    text-align: center; }
-
+  font-size: 16px;
+}
+.product-card__block-price.hasDiscount .block-price__price {
+  text-decoration: line-through;
+  text-align: center;
+}
+.product-card__block-price.hasDiscount .block-price__discount-price {
+  display: block;
+  text-align: center;
+}
 .product-card__icons-block {
   display: flex;
   flex-direction: column;
   gap: 0.5em;
   height: 90%;
-  justify-content: space-between; }
+  justify-content: space-between;
+}
 
 .counter-block__counter {
-  height: calc(39.6px + 18.4px + 15px); }
-  .counter-block__counter input {
-    font-size: 16px;
-    text-align: center;
-    padding: 0.5em 1.9em;
-    border-radius: 5px;
-    justify-self: center;
-    max-width: 6em;
-    border: 1px solid #b3b3b3; }
+  height: 73px;
+}
+.counter-block__counter input {
+  font-size: 16px;
+  text-align: center;
+  padding: 0.5em 1.9em;
+  border-radius: 5px;
+  justify-self: center;
+  max-width: 6em;
+  border: 1px solid #b3b3b3;
+}
 
 .counter__minus {
   height: 20px;
@@ -173,17 +193,18 @@
   width: 20px;
   position: relative;
   background-color: transparent;
-  cursor: pointer; }
-  .counter__minus::before {
-    cursor: pointer;
-    content: '';
-    top: 9px;
-    left: 2.5px;
-    height: 2.5px;
-    width: 15px;
-    background-color: black;
-    position: absolute; }
-
+  cursor: pointer;
+}
+.counter__minus::before {
+  cursor: pointer;
+  content: "";
+  top: 9px;
+  left: 2.5px;
+  height: 2.5px;
+  width: 15px;
+  background-color: black;
+  position: absolute;
+}
 .counter__plus {
   height: 20px;
   top: -30px;
@@ -191,65 +212,75 @@
   width: 20px;
   position: relative;
   background-color: transparent;
-  cursor: pointer; }
-  .counter__plus::after {
-    cursor: pointer;
-    content: '';
-    position: absolute;
-    right: 2.5px;
-    top: 9px;
-    height: 3px;
-    width: 15px;
-    background-color: black; }
-  .counter__plus::before {
-    cursor: pointer;
-    cursor: pointer;
-    position: absolute;
-    content: '';
-    right: 2.5px;
-    top: 9px;
-    transform: rotate(90deg);
-    height: 2.5px;
-    width: 15px;
-    background-color: black; }
+  cursor: pointer;
+}
+.counter__plus::after {
+  cursor: pointer;
+  content: "";
+  position: absolute;
+  right: 2.5px;
+  top: 9px;
+  height: 3px;
+  width: 15px;
+  background-color: black;
+}
+.counter__plus::before {
+  cursor: pointer;
+  cursor: pointer;
+  position: absolute;
+  content: "";
+  right: 2.5px;
+  top: 9px;
+  transform: rotate(90deg);
+  height: 2.5px;
+  width: 15px;
+  background-color: black;
+}
 
 .product-info__name {
   margin-bottom: 1em;
   color: black;
   font-size: 18px;
-  cursor: pointer; }
-  .product-info__name a {
-    color: black; }
-
+  cursor: pointer;
+}
+.product-info__name a {
+  color: black;
+}
 .product-info__color {
   font-size: 15px;
   margin-bottom: 0.3em;
-  opacity: 0.7; }
-
+  opacity: 0.7;
+}
 .product-info__size {
   font-size: 15px;
-  opacity: 0.7; }
+  opacity: 0.7;
+}
 
 .icons-block__favorites-icon {
   opacity: 0.6;
-  cursor: pointer; }
-  .icons-block__favorites-icon:hover {
-    opacity: 1; }
-  .icons-block__favorites-icon img {
-    height: 1.7em; }
-
+  cursor: pointer;
+}
+.icons-block__favorites-icon:hover {
+  opacity: 1;
+}
+.icons-block__favorites-icon img {
+  height: 1.7em;
+}
 .icons-block__cart-icon {
   opacity: 0.6;
-  cursor: pointer; }
-  .icons-block__cart-icon:hover {
-    opacity: 1; }
-  .icons-block__cart-icon img {
-    height: 1.7em; }
+  cursor: pointer;
+}
+.icons-block__cart-icon:hover {
+  opacity: 1;
+}
+.icons-block__cart-icon img {
+  height: 1.7em;
+}
 
 .information-block__info {
   display: flex;
-  justify-content: space-between; }
-
+  justify-content: space-between;
+}
 .information-block__button {
   cursor: pointer;
   border-radius: 10px;
@@ -258,123 +289,168 @@
   text-align: center;
   white-space: nowrap;
   width: 100%;
-  padding: 1.3em 0em; }
-  .information-block__button:hover {
-    color: white; }
+  padding: 1.3em 0em;
+}
+.information-block__button:hover {
+  color: white;
+}
 
 @media (max-width: 1150px) {
   .cart__container {
     max-width: 70em;
-    padding: 2em 1em 3em; }
+    padding: 2em 1em 3em;
+  }
   .cart__main-block {
-    gap: 1em; }
+    gap: 1em;
+  }
+
   .main-block__products-cards {
-    padding: 1em; }
+    padding: 1em;
+  }
   .main-block__information-block {
     min-width: 300px;
-    padding: 1em; }
+    padding: 1em;
+  }
+
   .products-cards__product-card {
-    padding: 1em; }
+    padding: 1em;
+  }
+
   .information-block__button {
     padding-top: 1em;
     padding-bottom: 1em;
-    align-self: center; } }
-
+    align-self: center;
+  }
+}
 @media (max-width: 1000px) {
   .cart__container {
-    max-width: 60em; }
+    max-width: 60em;
+  }
   .cart__main-block {
     gap: 1.5em;
-    flex-direction: column; }
+    flex-direction: column;
+  }
+
   .main-block__products-cards {
-    order: 2; }
+    order: 2;
+  }
   .main-block__information-block {
     padding: 1.5em 2em;
     width: 100%;
-    order: 1; } }
-
+    order: 1;
+  }
+}
 @media (max-width: 900px) {
   .cart__container {
-    width: 100%; }
+    width: 100%;
+  }
   .cart__title {
-    margin-bottom: 1em; }
+    margin-bottom: 1em;
+  }
   .cart__main-block {
     flex-direction: column;
     display: flex;
     justify-content: flex-start;
-    gap: 1em; }
+    gap: 1em;
+  }
+
   .products-cards__product-card {
     max-width: 100%;
     gap: 1em;
-    padding: 1em; }
+    padding: 1em;
+  }
+
   .information-block__info {
     width: 100%;
     display: flex;
     flex-direction: row;
-    justify-content: space-between; }
+    justify-content: space-between;
+  }
   .information-block__button {
     margin: 0;
     text-align: center;
     width: 100%;
-    padding: 1em 0em; } }
-
+    padding: 1em 0em;
+  }
+}
 @media (max-width: 830px) {
   .cart__container {
     padding-top: 1em;
-    padding-bottom: 2em; } }
-
+    padding-bottom: 2em;
+  }
+}
 @media (max-width: 600px) {
   .main-block__products-cards {
-    padding: 0.5em 1em; }
+    padding: 0.5em 1em;
+  }
+
   .products-cards__product-card {
     padding: 1em 0.5em;
     gap: 0.8em;
     width: 100%;
     grid-template-columns: 1fr;
-    grid-template: "image product-info icons-block" max-content "image block-price icons-block" min-content "image counter-block icons-block" 60px / min-content 1fr min-content; }
+    grid-template: "image product-info icons-block" max-content "image block-price icons-block" min-content "image counter-block icons-block" 60px/min-content 1fr min-content;
+  }
+
   .product-card__image {
-    grid-area: image; }
-    .product-card__image img {
-      height: 10em;
-      width: 10em; }
+    grid-area: image;
+  }
+  .product-card__image img {
+    height: 10em;
+    width: 10em;
+  }
   .product-card__product-info {
     align-self: flex-start;
     justify-self: flex-start;
-    grid-area: product-info; }
+    grid-area: product-info;
+  }
   .product-card__counter-block {
-    grid-area: counter-block; }
+    grid-area: counter-block;
+  }
   .product-card__block-price {
     align-self: flex-start;
     justify-self: flex-start;
-    grid-area: block-price; }
+    grid-area: block-price;
+  }
   .product-card__icons-block {
     grid-area: icons-block;
     display: flex;
     flex-direction: column;
     gap: 0.5em;
     height: 90%;
-    justify-content: space-between; }
-  .product-info__name {
-    margin-bottom: 0.4em; } }
+    justify-content: space-between;
+  }
 
+  .product-info__name {
+    margin-bottom: 0.4em;
+  }
+}
 @media (max-width: 400px) {
   .cart__empty-image {
     height: 125px !important;
-    width: 125px !important; }
+    width: 125px !important;
+  }
   .cart__title {
-    margin-left: 1em; }
+    margin-left: 1em;
+  }
   .cart__main-block {
-    gap: 0; }
-    .cart__main-block :last-child.products-cards__product-card {
-      border-bottom: 1px solid #b3b3b3; }
+    gap: 0;
+  }
+  .cart__main-block :last-child.products-cards__product-card {
+    border-bottom: 1px solid #b3b3b3;
+  }
+
   .main-block__products-cards {
     padding-left: 0;
     padding-right: 0;
     border: 0;
-    border-radius: 0; }
+    border-radius: 0;
+  }
   .main-block__information-block {
     border-left: 0;
     border-right: 0;
     padding-left: 1em;
     padding-left: 1em;
-    border-radius: 0; } }
+    border-radius: 0;
+  }
+}
